--- a/css/styles.css
+++ b/css/styles.css
@@ -625,15 +625,13 @@ a:active {
     color: var(--color-base);
 }
 
-/*#navbar .ul-container li a:hover {
-    color: var(--color-white);
-    background-color: var(--color-base);
-    transition: background-color 1s ease;
-}*/
+#navbar .ul-container li a:hover {
+    color: var(--color-base);
+}
 
 #navbar .ul-container .active a {
-    color: var(--color-white);
-    background-color: var(--color-base);
+    color: var(--color-base);
+    font-weight: 800;
 }
 
 
