--- a/css/styles.css
+++ b/css/styles.css
@@ -841,7 +841,7 @@ textarea[name=message]:focus{
 
 
     .navbar {
-        justify-content: center;
+        justify-content: left;
         align-items: center;
         height: 55px;
     }
@@ -850,7 +850,7 @@ textarea[name=message]:focus{
         height: 45px;
         z-index: 10;
         position: relative;
-        margin-left: 0;
+        margin-left: 0.5rem;
     }
 
     .nav-ul {
