--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ a {
 /* ----- */
 .feature-description a:hover,
 .site-footer p a:hover,
-.avatar-title h3 a:hover,
+.avatar-title p a:hover,
 .alert-note-right a:hover {
     border-bottom: 1.5px #004aad dotted;
     cursor: pointer;
@@ -545,7 +545,7 @@ body {
     text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
 }
 
-.row .groups-section .column .avatar-title h3 {
+.row .groups-section .column .avatar-title p {
     margin-top: 1rem;
 }
 
