--- a/css/styles.css
+++ b/css/styles.css
@@ -445,7 +445,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .features-section .feature {
