update (horrible code)

--- a/css/styles.css
+++ b/css/styles.css
@@ -445,7 +445,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .features-section .feature {
@@ -1104,10 +1104,13 @@ pre p {
     margin: 1rem 0 1rem 0;
 }
 
-.avatar-image img {
+.features-section-asd {
+    color: var(--color-text);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
-
-
 
 
 
