--- a/css/styles.css
+++ b/css/styles.css
@@ -1110,10 +1110,14 @@ pre p {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 1rem;
 }
 
 .container-feature .avatar .avatar-image img {
     width: 10rem;
+}
+
+.container-feature {
 }
 
 
