--- a/css/styles.css
+++ b/css/styles.css
@@ -1113,8 +1113,8 @@ pre p {
     width: 10rem;
     max-width: 344px;
     height: auto;
-    border-radius: 50%;
-    border: 1px solid var(--color-base);
+    /*border-radius: 50%;
+    border: 1px solid var(--color-base);*/
 }
 
 .features-section-asd .container-description .asd .feature-title,
@@ -1124,7 +1124,7 @@ pre p {
 
 
 .container-description {
-    flex-basis: 50%; 
+    flex-basis: 60%; 
     color: var(--color-text);
     display: flex;
     text-align: left;
