--- a/css/styles.css
+++ b/css/styles.css
@@ -1114,7 +1114,7 @@ pre p {
     max-width: 344px;
     height: auto;
     border-radius: 50%;
-    border: 1px solid var(--border-color);
+    border: 1rem solid var(--color-base);
 }
 
 .features-section-asd .container-description .asd .feature-title,
