--- a/css/styles.css
+++ b/css/styles.css
@@ -1133,7 +1133,8 @@ pre p {
 @media (max-width: 1300px) {
 
     .container-description {
-        padding: 0 0 0 0;
+        
+        padding: 0 5rem 0 5rem;
         text-align: center;
     }
 
