--- a/css/styles.css
+++ b/css/styles.css
@@ -1133,15 +1133,26 @@ pre p {
 @media (max-width: 1300px) {
 
     .container-description {
-        
         padding: 0 5rem 0 5rem;
         text-align: center;
     }
 
-    pre p {
-        width: 100%;
+    .faq {
+        text-align: center;
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+    }
+    
+    .faq .faq-titles h1 {
+        font-size: 3rem;
+        margin: 0 0 0 0;
     }
 
+    .faq .faq-questions {
+        padding: 0 2rem 0 2rem;
+        margin: 0 0 0 0;
+        text-align: left;
+    }
     
     .features-section-asd {
         flex-direction: column;
