--- a/css/styles.css
+++ b/css/styles.css
@@ -1106,7 +1106,6 @@ pre p {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-bottom: 1rem;
 }
 
 .container-feature .avatar .avatar-image img {
@@ -1114,7 +1113,7 @@ pre p {
     max-width: 344px;
     height: auto;
     border-radius: 50%;
-    border: 1rem solid var(--color-base);
+    /*border: 1px solid var(--color-base);*/
 }
 
 .features-section-asd .container-description .asd .feature-title,
