--- a/css/styles.css
+++ b/css/styles.css
@@ -1047,7 +1047,7 @@ textarea[name=message]:focus{
 }
 
 
-/* -------- */
+/* ---------------------------------------------------------- */
 
 
 /*  ---------- Faq ---------- */
@@ -1101,9 +1101,7 @@ pre p {
 }
 
 
-/* --------- */
-
-
+/* ---------- Features ----------  */
 
 
 .features-section-asd {
@@ -1125,9 +1123,6 @@ pre p {
 .features-section-asd .container-description .asd .feature-description {
     margin: 1rem 0 1rem 0;
 }
-
-
-
 
 .container-description {
     flex-basis: 60%; 
@@ -1168,6 +1163,140 @@ pre p {
     .features-section-asd {
         flex-direction: column;
         align-items: center;
+    }
+
+}
+
+
+/* ----------- Slider ----------- */
+
+
+.slider .titles h1 {
+    text-align: right;
+    padding: 0 5rem 0 0;
+}
+
+.blog-slider__container {
+    background-color: var(--color-text);
+    max-width: 80%;
+    position: relative;
+    padding-bottom: 56.25%; 
+    padding-top: 25px;
+    height: 0;
+    margin: auto;
+}
+
+.blog-slider__container img {
+    object-fit: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.blog-slider__text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+.blog-slider__numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+}
+
+.blogSlider__dots {
+    text-align: center;
+}
+
+.blogSlider__dots--dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.slider-active,
+.blogSlider__dots--dot:hover {
+background-color: #717171;
+}
+
+.fade {
+-webkit-animation-name: fade;
+-webkit-animation-duration: 1.5s;
+animation-name: fade;
+animation-duration: 1.5s;
+}
+  
+@-webkit-keyframes fade {
+
+    from {
+        opacity: .4;
+    }
+
+    to {
+        opacity: 1;
+    }
+
+}
+
+@keyframes fade {
+
+    from {
+        opacity: .4;
+    }
+
+    to {
+        opacity: 1;
+    }
+
+}
+
+@media (max-width: 1300px) {
+    
+    .titles h1, 
+    .slider .titles h1 {
+    text-align: center;
+    padding: 0 2rem 0 2rem;
     }
 
 }
