--- a/css/styles.css
+++ b/css/styles.css
@@ -297,8 +297,8 @@ body {
 }
 
 .container-hero .hero-image img {
-    width: 90%;
-    margin: 5rem 0 10px 0;
+    width: 200%;
+    margin: 3rem 0 0 0;
 }
 
 
@@ -947,6 +947,7 @@ textarea[name=message]:focus{
     }
 
     .container-hero .hero-image img {
+        width: 100%;
         margin: 0 0 0 0;
     }
 
