--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@ a {
     color: #004aad;
 }
 
-/* ----- */
 .feature-description a:hover,
 .site-footer p a:hover,
 .avatar-title p a:hover,
@@ -25,7 +24,6 @@ a {
     border-bottom: 1.5px #004aad dotted;
     cursor: pointer;
 }
-/* ----- */
 
 .titles {
     padding: 5rem 0 0 0;
@@ -42,8 +40,6 @@ hr {
     margin: 1rem 0 1rem 0;
 }
 
-
-/* ------- */
 body {
     font-family: inherit;
     font-size: 1rem;
@@ -57,7 +53,31 @@ body {
     line-height: 1.5;
     color: var(--color-text);
     text-align: left;
-} 
+}
+
+.alert-note-left {
+    background-color: #f0f7fb;
+    border-left: solid 4px #3498db;
+    padding: 12px;
+    width: 50%;
+    margin: auto;
+}
+
+.alert-note-top {
+    background-color: #f0f7fb;
+    border-top: solid 4px #3498db;
+    padding: 12px;
+    width: 50%;
+    margin: auto;
+}
+
+.alert-note-right {
+    background-color: #f0f7fb;
+    border-right: solid 4px #3498db;
+    padding: 12px;
+    width: 50%;
+    margin: auto;
+}
 
 
 /*---------- Navbar ----------*/
@@ -302,7 +322,7 @@ body {
 }
 
 
-/* Animation */
+/* Hero animation */
 
 
 .container-hero 
@@ -327,10 +347,6 @@ body {
 
 /*---------- About ----------*/
 
-/*
-#about {
-    background: linear-gradient(180deg, var(--color-base), var(--color-white));
-}*/
 
 .container-avatar {
     display: flex;
@@ -350,13 +366,6 @@ body {
     height: auto;
     border-radius: 50%;
 }
-
-/*.container-avatar .avatar-image img:hover {
-    width: 80%;
-    max-width: 344px;
-    height: auto;
-    border-radius: 50%;
-}*/
 
 .container-avatar .avatar-description h2 {
     color: var(--color-text);
@@ -417,7 +426,7 @@ body {
 
 
 /*---------- Footer ----------*/
-    
+
 
 .site-footer {
     color: var(--color-text);
@@ -482,24 +491,6 @@ body {
 .row {
     text-align: center;
 } 
-
-/* ------ */
-.alert-note-left {
-    background-color: #f0f7fb;
-    border-left: solid 4px #3498db;
-    padding: 12px;
-    width: 50%;
-    margin: auto;
-}
-
-.alert-note-top {
-    background-color: #f0f7fb;
-    border-top: solid 4px #3498db;
-    padding: 12px;
-    width: 50%;
-    margin: auto;
-}
-/* -------- */
 
 .row .groups-section {
     color: var(--color-text);
@@ -585,15 +576,6 @@ body {
     margin: 0 0 1rem 0;
     text-align: center;
 }
-
-/*
-#navbar .secondary-nav-logo {
-    font-size: 1.2rem;
-}
-
-#navbar .secondary-nav-logo img {
-    height: 50px;
-}*/
 
 #navbar .secondary-nav #search {
     width: 100%; 
@@ -696,7 +678,6 @@ a:active {
 /*---------- Contact ----------*/
 
 
-/* ------------ */
 .contact .feature-icon {
     transition: all 0.7s ease-in-out;
 }
@@ -704,17 +685,6 @@ a:active {
 .contact .feature-icon:hover{
     transform: rotateY(360deg);
 }
-/*------------ */
-
-/*------------ */
-.alert-note-right {
-    background-color: #f0f7fb;
-    border-right: solid 4px #3498db;
-    padding: 12px;
-    width: 50%;
-    margin: auto;
-}
-/*------------ */
 
 .section-form {
     margin: 2.5rem 0 0 0;
@@ -724,7 +694,6 @@ a:active {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-/*    background: -webkit-linear-gradient(right, var(--color-base), var(--color-white))*/
 }
 
 .section-form .form {
@@ -847,7 +816,6 @@ textarea[name=message]:focus{
     text-align: center;
 }
 
-/* ----------- */
 .titles .search-input {
     width: 50%;
     font-size: 16px; 
@@ -856,7 +824,52 @@ textarea[name=message]:focus{
     border: 1px solid var(--border-color);
     background: #fff url("https://francosbenitez.github.io/mepc/img/search.svg") 1rem no-repeat;
 }
-/* ----------- */
+
+
+/*  ---------- FAQ ---------- */
+
+
+.hidden {
+    display: none;
+}
+
+.faq .faq-titles h1 {
+    padding: 5rem 0 0 0;
+    font-size: 3rem;
+    margin: 0 0 1rem 5rem;
+}
+
+.faq .faq-questions {
+    font-size: 16px; 
+    margin-top: 1rem;
+    padding: 0 .2rem 0 .2rem;
+    margin: 0 0 1rem 5rem;
+    text-align: left;
+}
+
+.faq .faq-questions p {
+    margin: 1rem 0 1rem 0;
+}
+ 
+.faq .faq-questions ul li { 
+    margin-bottom: 1rem;
+    list-style: none; 
+}
+
+.faq .faq-questions ul li .btn-outline-success {
+    background: var(--color-white);
+    color: var(--color-text);
+    border: none;
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+}
+
+pre p {
+    color: var(--color-text);
+}
 
 
 /*---------- Media query max. 1300px ----------*/
@@ -865,7 +878,7 @@ textarea[name=message]:focus{
 @media (max-width: 1300px) {
 
 
-/* Navbar */
+    /* Navbar */
 
 
     .navbar {
@@ -934,7 +947,7 @@ textarea[name=message]:focus{
     }
 
 
-/* Hero */
+    /* Hero */
 
 
     .container-hero {
@@ -952,7 +965,7 @@ textarea[name=message]:focus{
     }
 
 
- /* About */
+    /* About */
  
  
     .container-avatar {
@@ -960,7 +973,7 @@ textarea[name=message]:focus{
     }
 
 
-/* Features */
+    /* Features */
 
 
     .features-section {
@@ -970,7 +983,7 @@ textarea[name=message]:focus{
 
 
 
-/* Study groups */
+    /* Study groups */
 
 
     .row .groups-section {
@@ -982,7 +995,7 @@ textarea[name=message]:focus{
     }
 
 
-/* Contact */
+    /* Contact */
 
 
     .section-form .form .form-wrapper .form-image img {
@@ -990,7 +1003,7 @@ textarea[name=message]:focus{
     }
 
 
-/* FAQ */
+    /* FAQ */
 
 
     .faq .faq-questions ul li .btn-outline-success {
@@ -1038,7 +1051,8 @@ textarea[name=message]:focus{
         margin: 0 0 0 0;
     }
     
-/* Sections */
+
+    /* Sections */
 
 
     #main-doc {
@@ -1049,52 +1063,6 @@ textarea[name=message]:focus{
 
 
 /* ---------------------------------------------------------- */
-
-
-/*  ---------- Faq ---------- */
-
-
-.hidden {
-    display: none;
-}
-
-.faq .faq-titles h1 {
-    padding: 5rem 0 0 0;
-    font-size: 3rem;
-    margin: 0 0 1rem 5rem;
-}
-
-.faq .faq-questions {
-    font-size: 16px; 
-    margin-top: 1rem;
-    padding: 0 .2rem 0 .2rem;
-    margin: 0 0 1rem 5rem;
-    text-align: left;
-}
-
-.faq .faq-questions p {
-    margin: 1rem 0 1rem 0;
-}
- 
-.faq .faq-questions ul li { 
-    margin-bottom: 1rem;
-    list-style: none; 
-}
-
-.faq .faq-questions ul li .btn-outline-success {
-    background: var(--color-white);
-    color: var(--color-text);
-    border: none;
-    cursor: pointer;
-}
-
-.hidden {
-    display: none;
-}
-
-pre p {
-    color: var(--color-text);
-}
 
 
 /* ---------- Features ----------  */
