--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -42,10 +42,10 @@ hr {
 }
 
 body {
-  font-family: inherit;
+  // font-family: inherit;
   font-size: 1rem;
-  line-height: inherit;
-  color: inherit;
+  // line-height: inherit;
+  // color: inherit;
   margin-top: 70px;
   padding-top: 0;
   counter-reset: captions;
