--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -12,6 +12,23 @@
   --color-white: #FFFFFF;
   --color-text: #313131;
   --border-color: #C1C1C1;
+  /* Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-white) var(--color-base);
+  scroll-behavior: smooth;
+}
+
+/* Chrome, Edge, and Safari */
+body::-webkit-scrollbar {
+  width: 12px;
+}
+body::-webkit-scrollbar-track {
+  background: var(--color-white);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--color-base); 
+  border-radius: 20px;       
+  border: 3px solid var(--color-white);  
 }
 
 a {
