--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -9,7 +9,11 @@
   font-family: 'Montserrat';
   box-sizing: border-box;
   --color-base: #004aad;
-  --color-white: #FFFFFF;
+  --color-white: #F4FAFF;
+  --color-secondary: #DEE7E7;
+  --color-tertiary: #B7ADCF;
+  --color-fourth: #618985;
+  --color-fifth: #C19875;
   --color-text: #313131;
   --border-color: #C1C1C1;
   /* Firefox */
