--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,4 +1,20 @@
 // Display font to preload
 
-
 // Type sizes
+@mixin h1 {
+}
+
+@mixin h2 {
+}
+
+@mixin h3 {
+}
+
+@mixin h4 {
+}
+
+@mixin h5 {
+}
+
+@mixin h6 {
+}
