--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 // CSS variables
 :root {
-    $color__primary: #004aad;
-    --color__primary: #{$color__primary};
-    --color__primary--muted: #{transparentize($color__primary, 0.7)};
+  $color__primary: #004aad;
+  --color__primary: #{$color__primary};
+  $color__background: #f4faff;
 }
 
 // Colours
