--- a/components/assets/scss/default.scss
+++ b/components/assets/scss/default.scss
@@ -1,4 +1,6 @@
 @import 'keyframes';
+@import 'mixins';
+@import 'variables';
 
 * {
   margin: 0;
@@ -23,31 +25,31 @@ body {
   margin: 0;
   font-weight: 400;
   line-height: 1.5;
-  color: var(--color-text);
+  color: $color__text;
   text-align: left;
 }
 
 hr {
-  border: var(--border-color) 1px solid;
+  border: $color__border 1px solid;
   margin: 1rem 0 1rem 0;
 }
 
 a {
-  color: #004aad;
+  color: $color__primary;
 }
 
 .feature-description a:hover,
 .site-footer p a:hover,
 .avatar-title p a:hover,
 .alert-note-right a:hover {
-  border-bottom: 1.5px #004aad dotted;
+  border-bottom: 1.5px $color__primary dotted;
   cursor: pointer;
 }
 
 .titles {
   padding: 5rem 0 0 0;
   text-align: center;
-  color: var(--color-text);
+  color: $color__text;
 }
 
 .titles h1 {
@@ -55,27 +57,25 @@ a {
 }
 
 .alert-note-left {
-  background-color: #f0f7fb;
-  border-left: solid 4px #3498db;
+  background-color: $color__alert--bg;
+  border-left: solid 4px $color__alert;
   padding: 12px;
   width: 50%;
   margin: auto;
 }
 
 .alert-note-top {
-  background-color: #f0f7fb;
-  border-top: solid 4px #3498db;
+  background-color: $color__alert--bg;
+  border-top: solid 4px $color__alert;
   padding: 12px;
   width: 50%;
   margin: auto;
 }
 
 .alert-note-right {
-  background-color: #f0f7fb;
-  border-right: solid 4px #3498db;
+  background-color: $color__alert--bg;
+  border-right: solid 4px $color__alert;
   padding: 12px;
   width: 50%;
   margin: auto;
 }
-
-/*---------- Media query max. 1300px ----------*/
