--- a/components/assets/scss/_mixins.scss
+++ b/components/assets/scss/_mixins.scss
@@ -7,7 +7,7 @@
 }
 
 @mixin titles {
-  padding: 5rem 0 0 0;
+  padding-top: 5rem;
   text-align: center;
   color: $color__text;
 
@@ -16,7 +16,7 @@
 
     @media (max-width: $breakpoint--md) {
       text-align: center;
-      padding: 0 2rem 0 2rem;
+      padding: 0 2rem;
     }
   }
 }
