--- a/components/assets/scss/default.scss
+++ b/components/assets/scss/default.scss
@@ -19,7 +19,7 @@ body {
   font-size: 1rem;
   line-height: inherit;
   color: inherit;
-  margin-top: 70px;
+  margin-top: 70px !important;
   padding-top: 0;
   counter-reset: captions;
   margin: 0;
