--- a/components/global/TheFooter/styles.module.scss
+++ b/components/global/TheFooter/styles.module.scss
@@ -6,20 +6,20 @@
   background-color: $color__white;
   padding: 0.75rem 0 1rem;
   box-shadow: 0 0 2rem -1rem rgba(0, 0, 0, 0.2);
+}
 
-  .footer__content {
-    margin: 0 auto;
-    max-width: 1152px;
-    position: relative;
-    width: 90%;
+.footer .footer-content {
+  margin: 0 auto;
+  max-width: 1152px;
+  position: relative;
+  width: 90%;
 
-    p {
-      margin: 10px 0 10px 0;
-    }
+  p {
+    margin: 10px 0 10px 0;
+  }
 
-    svg {
-      width: 10px;
-      height: 10px;
-    }
+  svg {
+    width: 10px;
+    height: 10px;
   }
 }
