style: modify navbar

--- a/components/global/TheNavbar/styles.module.scss
+++ b/components/global/TheNavbar/styles.module.scss
@@ -7,7 +7,7 @@
   background-color: $color__white;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 
-  .header__content {
+  .header-content {
     max-width: 1152px;
     position: relative;
     top: 50%;
@@ -30,7 +30,7 @@
         margin: 0 auto;
       }
 
-      .nav__logo {
+      .nav-logo {
         svg {
           height: 50px;
           position: absolute;
@@ -52,7 +52,7 @@
         }
       }
 
-      .nav__list {
+      .nav-list {
         width: 100%;
         text-align: right;
 
@@ -153,7 +153,7 @@
         }
       }
 
-      .nav__btn {
+      .nav-btn {
         display: none;
         z-index: 10;
 
@@ -191,16 +191,16 @@
 
   .toggle {
     .line {
-      &__1 {
+      &-1 {
         transform: rotate(-45deg) translate(-5px, 6px);
         background-color: $color__primary;
       }
 
-      &__2 {
+      &-2 {
         opacity: 0;
       }
 
-      &__3 {
+      &-3 {
         transform: rotate(45deg) translate(-5px, -6px);
         background-color: $color__primary;
       }
