style: remove some sections | chore: update todo

--- a/components/global/TheNavbar/styles.module.scss
+++ b/components/global/TheNavbar/styles.module.scss
@@ -59,7 +59,8 @@
 }
 
 .nav-list {
-  margin: auto;
+  // margin: auto;
+  width: 100%;
   text-align: right;
 
   @media (max-width: $breakpoint--md) {
