--- a/styles/default.scss
+++ b/styles/default.scss
@@ -70,3 +70,19 @@ a {
   position: relative;
   width: 100%;
 }
+
+// Redes
+// .redes {
+//   background: #365cdf;
+//   color: #fff;
+//   padding: 20px 0;
+// }
+
+// .text-center {
+//   text-align: center !important;
+// }
+
+// .redes a {
+//   color: #fff;
+//   margin: 0px 7px;
+// }
