chore: clean images

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,3 +17,9 @@ body {
   background-color: var(--body);
   font-family: "Montserrat Regular", Arial, Helvetica, sans-serif;
 }
+
+.wrapper {
+  min-height: 100vh;
+  position: relative;
+  width: 100%;
+}
