--- a/styles/global.css
+++ b/styles/global.css
@@ -28,3 +28,19 @@ body {
 .navbar {
   box-shadow: rgb(0 0 0 / 25%) 0px 0px 5px;
 }
+
+/* About */
+.iframe-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+}
+
+.iframe-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
