--- a/styles/global.css
+++ b/styles/global.css
@@ -29,6 +29,11 @@ body {
   box-shadow: rgb(0 0 0 / 25%) 0px 0px 5px;
 }
 
+/* Footer */
+.footer {
+  box-shadow: rgb(0 0 0 / 25%) 0px 0px 5px;
+}
+
 /* About */
 .iframe-wrapper {
   position: relative;
