--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,24 @@
     url("/fonts/Montserrat-Regular.woff") format("woff");
 }
 
+@font-face {
+  font-family: "Montserrat Medium";
+  src: url("/fonts/Montserrat-Medium.woff2") format("woff2"),
+    url("/fonts/Montserrat-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Montserrat SemiBold";
+  src: url("/fonts/Montserrat-SemiBold.woff2") format("woff2"),
+    url("/fonts/Montserrat-SemiBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Montserrat Bold";
+  src: url("/fonts/Montserrat-Bold.woff2") format("woff2"),
+    url("/fonts/Montserrat-Bold.woff") format("woff");
+}
+
 * {
   --primary: #004aad;
   --body: #f4f7f5;
